# template-mdr-k1986be92qi-rtos

./: .gitignore  CMakeLists.txt  Makefile
JLink/: FlashMCU.jlink  ReadMCU.jlink
lib/CMSIS/CM3/DeviceSupport/MDR32F9Qx/startup/gcc/: startup_MDR32F9Qx.s
lib/Config/: MDR32F9Qx_config.h
lib/MDR32F9Qx_StdPeriph_Driver/inc/: MDR32F9Qx_adc.h  MDR32F9Qx_arinc429r.h  MDR32F9Qx_arinc429t.h  MDR32F9Qx_audio.h  MDR32F9Qx_bkp.h  MDR32F9Qx_can.h  MDR32F9Qx_comp.h  MDR32F9Qx_dac.h  MDR32F9Qx_dma.h  MDR32F9Qx_dsp.h  MDR32F9Qx_ebc.h  MDR32F9Qx_eeprom.h  MDR32F9Qx_eth.h  MDR32F9Qx_i2c.h  MDR32F9Qx_iwdg.h  MDR32F9Qx_keypad.h  MDR32F9Qx_led.h  MDR32F9Qx_mil_std_1553.h  MDR32F9Qx_port.h  MDR32F9Qx_power.h  MDR32F9Qx_rst_clk.h  MDR32F9Qx_sdio.h  MDR32F9Qx_ssp.h  MDR32F9Qx_timer.h  MDR32F9Qx_uart.h  MDR32F9Qx_usb.h  MDR32F9Qx_wwdg.h
lib/MDR32F9Qx_StdPeriph_Driver/inc/IRQ_Handler_Template/: MDR32F9Qx_IT.h
lib/MDR32F9Qx_StdPeriph_Driver/inc/USB_Library/: MDR32F9Qx_usb_CDC.h  MDR32F9Qx_usb_default_handlers.h  MDR32F9Qx_usb_device.h  MDR32F9Qx_usb_handlers.h
lib/MDR32F9Qx_StdPeriph_Driver/src/: MDR32F9Qx_adc.c  MDR32F9Qx_arinc429r.c  MDR32F9Qx_arinc429t.c  MDR32F9Qx_audio.c  MDR32F9Qx_bkp._c  MDR32F9Qx_can.c  MDR32F9Qx_comp.c  MDR32F9Qx_dac.c  MDR32F9Qx_dma.c  MDR32F9Qx_dsp.c  MDR32F9Qx_ebc.c  MDR32F9Qx_eeprom.c  MDR32F9Qx_eth.c  MDR32F9Qx_i2c.c  MDR32F9Qx_iwdg.c  MDR32F9Qx_keypad.c  MDR32F9Qx_led.c  MDR32F9Qx_mil_std_1553.c  MDR32F9Qx_port.c  MDR32F9Qx_power.c  MDR32F9Qx_rst_clk.c  MDR32F9Qx_sdio.c  MDR32F9Qx_ssp.c  MDR32F9Qx_timer.c  MDR32F9Qx_uart.c  MDR32F9Qx_usb.c  MDR32F9Qx_wwdg.c
lib/MDR32F9Qx_StdPeriph_Driver/src/USB_Library/: MDR32F9Qx_usb_CDC.c  MDR32F9Qx_usb_device.c
src/: joystick.c  joystick.h  main.c  main.h  usb.c
src/freertos/: FreeRTOSConfig.h
